--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -26,7 +26,7 @@ displayName="Evolution" #mandatory
 # A text field displayed in the mod UI
 #credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
-authors="MGSchultz" #optional
+authors="MGSchultz, loi777" #optional
 # The description text for the mod (multi line!) (#mandatory)
 #description='''
 #This is a long form description of the mod. You can write whatever you want here
