--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,16 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+mod_id=evolution
+mod_name=Evolution
+mod_group=tgw.evolution
+mod_version=0.6.9
+mod_author=["MGSchultz"]
+mod_description=Evolution mod.
+minecraft_version=1.14.4
+forge_version=28.2.23
+mappings_channel=stable
+mappings_version=58-1.14.4
+mod_core_plugin=${mod_group}.core.CoreMod
+mod_mixin_configs=mixins.${mod_id}.json
 org.gradle.daemon=false
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx3G
