Added comment for access transformers.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,59 +1,78 @@
 #Classes
 public net.minecraft.client.model.geom.ModelPart$Polygon
 public net.minecraft.client.model.geom.ModelPart$Vertex
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage
 public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo
 public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap
 public net.minecraft.client.renderer.block.ModelBlockRenderer$Cache
 public net.minecraft.client.renderer.block.ModelBlockRenderer$SizeInfo
 public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo
+public net.minecraft.client.renderer.LevelRenderer$RenderChunkStorage
 public net.minecraft.client.renderer.LevelRenderer$RenderInfoMap
 public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture
 public net.minecraft.client.renderer.texture.TextureAtlasSprite$FrameInfo
 public net.minecraft.client.renderer.texture.TextureAtlasSprite$InterpolationData
+public net.minecraft.server.level.ChunkMap$DistanceManager
+public net.minecraft.server.level.ChunkMap$TrackedEntity
+public net.minecraft.server.level.DistanceManager$ChunkTicketTracker
+public net.minecraft.server.level.DistanceManager$FixedPlayerDistanceChunkTracker
+public net.minecraft.server.level.DistanceManager$PlayerTicketTracker
 
 #Fields
-public com.mojang.blaze3d.platform.NativeImage f_84964_
-public com.mojang.blaze3d.systems.RenderSystem f_157150_
-public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166817_
-public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166818_
-public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166820_
-public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166821_
-public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166822_
-public net.minecraft.client.Minecraft f_91078_
-public net.minecraft.client.model.geom.ModelPart$Cube f_104341_
-public net.minecraft.client.renderer.block.ModelBlockRenderer f_110996_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111110_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111111_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111112_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111113_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111114_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111115_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111185_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111186_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111187_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111188_
-public net.minecraft.client.renderer.block.ModelBlockRenderer$SizeInfo f_111258_
-public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109839_
-public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109841_
-public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109842_
-public net.minecraft.client.renderer.RenderStateShard f_110126_
-public net.minecraft.client.renderer.RenderStateShard f_110127_
-public net.minecraft.client.renderer.RenderStateShard f_110128_
-public net.minecraft.client.renderer.texture.TextureAtlasSprite f_118342_
-public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture f_174748_
-public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture f_174749_
-public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture f_174750_
-public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture f_174751_
-public net.minecraft.client.renderer.texture.TextureAtlasSprite$FrameInfo f_174771_
-public net.minecraft.client.renderer.texture.TextureAtlasSprite$FrameInfo f_174772_
+public com.mojang.blaze3d.platform.NativeImage f_84964_ #pixels
+public com.mojang.blaze3d.systems.RenderSystem f_157150_ #shaderLightDirections
+public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166817_ #mode
+public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166818_ #vertices
+public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166820_ #sortX
+public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166821_ #sortY
+public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166822_ #sortZ
+public net.minecraft.client.gui.Gui f_92986_ #minecraft
+public net.minecraft.client.Minecraft f_91078_ #missTime
+public net.minecraft.client.model.geom.ModelPart$Cube f_104341_ #polygons
+public net.minecraft.client.multiplayer.ClientChunkCache f_104411_ #level
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage f_104466_ #chunks
+public net.minecraft.client.renderer.block.ModelBlockRenderer f_110996_ #CACHE
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111110_ #corners
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111111_ #doNonCubicWeight
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111112_ #vert0Weights
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111113_ #vert1Weights
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111114_ #vert2Weights
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111115_ #vert3Weights
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111185_ #vert0
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111186_ #vert1
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111187_ #vert2
+public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111188_ #vert3
+public net.minecraft.client.renderer.block.ModelBlockRenderer$SizeInfo f_111258_ #shape
+public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109839_ #chunk
+public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109841_ #directions
+public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109842_ #step
+public net.minecraft.client.renderer.RenderStateShard f_110126_ #PARTICLES_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110127_ #WEATHER_TARGET
+public net.minecraft.client.renderer.RenderStateShard f_110128_ #CLOUDS_TARGET
+public net.minecraft.client.renderer.texture.TextureAtlasSprite f_118342_ #mainImage
+public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture f_174748_ #frame
+public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture f_174749_ #subFrame
+public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture f_174750_ #frames
+public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture f_174751_ #frameRowSize
+public net.minecraft.client.renderer.texture.TextureAtlasSprite$FrameInfo f_174771_ #index
+public net.minecraft.client.renderer.texture.TextureAtlasSprite$FrameInfo f_174772_ #time
+public net.minecraft.server.level.ChunkMap f_140126_ #viewDistance
+public net.minecraft.server.level.ChunkMap$TrackedEntity f_140472_ #entity
 
 #Methods
-public com.mojang.blaze3d.vertex.BufferBuilder$DrawState <init>(Lcom/mojang/blaze3d/vertex/VertexFormat;IILcom/mojang/blaze3d/vertex/VertexFormat$Mode;Lcom/mojang/blaze3d/vertex/VertexFormat$IndexType;ZZ)V
-public com.mojang.blaze3d.vertex.BufferBuilder$SortState <init>(Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;I[Lcom/mojang/math/Vector3f;FFF)V
-public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo <init>(Lnet/minecraft/client/renderer/chunk/ChunkRenderDispatcher$RenderChunk;Lnet/minecraft/core/Direction;I)V
-public net.minecraft.client.renderer.texture.TextureAtlasSprite m_118375_(II[Lcom/mojang/blaze3d/platform/NativeImage;)V
-public net.minecraft.client.renderer.ViewArea m_110866_(Lnet/minecraft/core/BlockPos;)Lnet/minecraft/client/renderer/chunk/ChunkRenderDispatcher$RenderChunk;
-public net.minecraft.network.chat.HoverEvent$ItemStackInfo <init>(Lnet/minecraft/world/item/Item;ILnet/minecraft/nbt/CompoundTag;)V
-public net.minecraft.server.level.ChunkMap m_140416_()Ljava/lang/Iterable;
-public net.minecraft.server.level.ChunkMap m_140421_()V
-public net.minecraft.server.level.ChunkMap m_183879_(Lnet/minecraft/world/level/ChunkPos;)Z
+public com.mojang.blaze3d.vertex.BufferBuilder$DrawState <init>(Lcom/mojang/blaze3d/vertex/VertexFormat;IILcom/mojang/blaze3d/vertex/VertexFormat$Mode;Lcom/mojang/blaze3d/vertex/VertexFormat$IndexType;ZZ)V #<constructor>
+public com.mojang.blaze3d.vertex.BufferBuilder$SortState <init>(Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;I[Lcom/mojang/math/Vector3f;FFF)V #<constructor>
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage m_104479_(I)Lnet/minecraft/world/level/chunk/LevelChunk; #getChunk
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage m_104481_(II)I #getIndex
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage m_104484_(ILnet/minecraft/world/level/chunk/LevelChunk;)V #replace
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage m_104487_(ILnet/minecraft/world/level/chunk/LevelChunk;Lnet/minecraft/world/level/chunk/LevelChunk;)Lnet/minecraft/world/level/chunk/LevelChunk; #replace
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage m_104500_(II)Z #inRange
+public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo <init>(Lnet/minecraft/client/renderer/chunk/ChunkRenderDispatcher$RenderChunk;Lnet/minecraft/core/Direction;I)V #<constructor>
+public net.minecraft.client.renderer.texture.TextureAtlasSprite m_118375_(II[Lcom/mojang/blaze3d/platform/NativeImage;)V #upload
+public net.minecraft.client.renderer.ViewArea m_110866_(Lnet/minecraft/core/BlockPos;)Lnet/minecraft/client/renderer/chunk/ChunkRenderDispatcher$RenderChunk; #getRenderChunkAt
+public net.minecraft.network.chat.HoverEvent$ItemStackInfo <init>(Lnet/minecraft/world/item/Item;ILnet/minecraft/nbt/CompoundTag;)V #<constructor>
+public net.minecraft.server.level.ChunkHolder m_143003_(Lnet/minecraft/server/level/ChunkMap;Ljava/util/concurrent/Executor;)V #updateFutures
+public net.minecraft.server.level.ChunkMap m_140174_(J)Lnet/minecraft/server/level/ChunkHolder; #getUpdatingChunkIfPresent
+public net.minecraft.server.level.ChunkMap m_140416_()Ljava/lang/Iterable; #getChunks
+public net.minecraft.server.level.ChunkMap m_140421_()V #tick
+public net.minecraft.server.level.ChunkMap m_183879_(Lnet/minecraft/world/level/ChunkPos;)Z #anyPlayerCloseEnoughForSpawning
