Updated Player Corpse screen and container to match new inventory.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -69,6 +69,7 @@ public net.minecraft.client.renderer.texture.TextureAtlasSprite$AnimatedTexture 
 public net.minecraft.client.renderer.texture.TextureAtlasSprite$FrameInfo f_174771_ #index
 public net.minecraft.client.renderer.texture.TextureAtlasSprite$FrameInfo f_174772_ #time
 public-f net.minecraft.client.Timer f_92521_ #msPerTick
+public net.minecraft.network.chat.NbtComponent f_178447_ #separator
 public net.minecraft.server.level.ChunkMap f_140126_ #viewDistance
 public net.minecraft.server.level.ChunkMap$TrackedEntity f_140472_ #entity
 public net.minecraft.stats.Stat f_12852_ #formatter
