Equip sounds play when equipping items in inventory.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -20,7 +20,6 @@ public net.minecraft.server.level.DistanceManager$ChunkTicketTracker
 public net.minecraft.server.level.DistanceManager$FixedPlayerDistanceChunkTracker
 public net.minecraft.server.level.DistanceManager$PlayerTicketTracker
 
-
 #Fields
 public-f com.mojang.blaze3d.platform.InputConstants$Type f_84887_ #displayTextSupplier
 public com.mojang.blaze3d.platform.NativeImage f_84964_ #pixels
@@ -78,7 +77,6 @@ public net.minecraft.world.entity.player.Player f_36089_ #DATA_PLAYER_MODE_CUSTO
 public net.minecraft.world.level.block.entity.SkullBlockEntity f_59755_ #profileCache
 public net.minecraft.world.level.block.entity.SkullBlockEntity f_59756_ #sessionService
 
-
 #Methods
 public com.mojang.blaze3d.vertex.BufferBuilder$DrawState <init>(Lcom/mojang/blaze3d/vertex/VertexFormat;IILcom/mojang/blaze3d/vertex/VertexFormat$Mode;Lcom/mojang/blaze3d/vertex/VertexFormat$IndexType;ZZ)V #<constructor>
 public com.mojang.blaze3d.vertex.BufferBuilder$SortState <init>(Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;I[Lcom/mojang/math/Vector3f;FFF)V #<constructor>
@@ -114,3 +112,4 @@ public net.minecraft.stats.Stat <init>(Lnet/minecraft/stats/StatType;Ljava/lang/
 public net.minecraft.util.SortedArraySet m_14274_(I)V #removeInternal
 public net.minecraft.util.SortedArraySet m_14276_(I)Ljava/lang/Object; #getInternal
 public net.minecraft.world.entity.LivingEntity m_141973_(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V #onEffectUpdated
+public net.minecraft.world.entity.LivingEntity m_147218_(Lnet/minecraft/world/item/ItemStack;)V #equipEventAndSound
