Fixed a glitch with baked models caused by multi-threading.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -50,6 +50,7 @@ public net.minecraft.client.gui.components.OptionsList$Entry f_169045_ #options
 public-f net.minecraft.client.gui.Font f_92710_ #lineHeight
 public net.minecraft.client.gui.screens.controls.KeyBindsScreen f_193977_ #keyBindsList
 public net.minecraft.client.gui.screens.OptionsSubScreen f_96281_ #lastScreen
+public-f net.minecraft.client.renderer.block.model.BlockFaceUV f_111388_ #rotation
 public net.minecraft.client.renderer.block.ModelBlockRenderer f_110996_ #CACHE
 public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111110_ #corners
 public net.minecraft.client.renderer.block.ModelBlockRenderer$AdjacencyInfo f_111111_ #doNonCubicWeight
