Included mixin config in the build.gradle file.

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ minecraft {
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
 
+            args '-mixin.config=mixins.evolution.json'
+
             mods {
                 evolution {
                     source sourceSets.main
@@ -81,6 +83,8 @@ minecraft {
             // You can set various levels here.
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
+
+            args '-mixin.config=mixins.evolution.json'
 
             mods {
                 evolution {
@@ -105,7 +109,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '-mixin.config=mixins.evolution.json --mod', 'evolution', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
                 examplemod {
