--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -123,6 +123,7 @@ public net.minecraft.server.level.Ticket m_9434_(J)Z #timedOut
 public net.minecraft.stats.Stat <init>(Lnet/minecraft/stats/StatType;Ljava/lang/Object;Lnet/minecraft/stats/StatFormatter;)V #constructor
 public net.minecraft.util.SortedArraySet m_14274_(I)V #removeInternal
 public net.minecraft.util.SortedArraySet m_14276_(I)Ljava/lang/Object; #getInternal
+protected net.minecraft.world.entity.Entity m_20074_()V #updateInWaterStateAndDoWaterCurrentPushing
 public net.minecraft.world.entity.LivingEntity m_141973_(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V #onEffectUpdated
 public net.minecraft.world.entity.LivingEntity m_147218_(Lnet/minecraft/world/item/ItemStack;)V #equipEventAndSound
 public net.minecraft.world.level.block.entity.BlockEntityType$Builder <init>(Lnet/minecraft/world/level/block/entity/BlockEntityType$BlockEntitySupplier;Ljava/util/Set;)V #<constructor>
