Improved HUD elements.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -31,7 +31,12 @@ public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166820_ #sortX
 public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166821_ #sortY
 public com.mojang.blaze3d.vertex.BufferBuilder$SortState f_166822_ #sortZ
 public net.minecraft.client.gui.components.OptionsList$Entry f_94485_ #children
+public net.minecraft.client.gui.Gui f_92981_ #VIGNETTE_LOCATION
+public net.minecraft.client.gui.Gui f_92982_ #WIDGETS_LOCATION
+public net.minecraft.client.gui.Gui f_92983_ #PUMPKIN_BLUR_LOCATION
 public net.minecraft.client.gui.Gui f_92986_ #minecraft
+public net.minecraft.client.gui.Gui f_168665_ #SPYGLASS_SCOPE_LOCATION
+public net.minecraft.client.gui.Gui f_168666_ #POWDER_SNOW_OUTLINE_LOCATION
 public net.minecraft.client.Minecraft f_91078_ #missTime
 public net.minecraft.client.model.geom.builders.CubeDeformation f_171459_ #growX
 public net.minecraft.client.model.geom.builders.CubeDeformation f_171460_ #growY
@@ -91,6 +96,10 @@ public net.minecraft.world.level.block.entity.SkullBlockEntity f_59756_ #session
 public com.mojang.blaze3d.vertex.BufferBuilder$DrawState <init>(Lcom/mojang/blaze3d/vertex/VertexFormat;IILcom/mojang/blaze3d/vertex/VertexFormat$Mode;Lcom/mojang/blaze3d/vertex/VertexFormat$IndexType;ZZ)V #<constructor>
 public com.mojang.blaze3d.vertex.BufferBuilder$SortState <init>(Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;I[Lcom/mojang/math/Vector3f;FFF)V #<constructor>
 public net.minecraft.client.gui.components.AbstractSelectionList m_93505_(Lnet/minecraft/client/gui/components/AbstractSelectionList$Entry;)V #bindEntryToSelf
+protected net.minecraft.client.gui.components.DebugScreenOverlay m_94058_(Lcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/util/FrameTimer;IIZ)V #drawChart
+public net.minecraft.client.gui.Font m_92787_(Lnet/minecraft/client/gui/font/glyphs/BakedGlyph;ZZFFFLcom/mojang/math/Matrix4f;Lcom/mojang/blaze3d/vertex/VertexConsumer;FFFFI)V #renderChar
+public net.minecraft.client.gui.Font m_92863_(Lnet/minecraft/resources/ResourceLocation;)Lnet/minecraft/client/gui/font/FontSet; #getFontSet
+public net.minecraft.client.gui.Gui m_168677_(IIFLnet/minecraft/world/entity/player/Player;Lnet/minecraft/world/item/ItemStack;I)V #renderSlot
 public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen m_6597_(Lnet/minecraft/world/inventory/Slot;IILnet/minecraft/world/inventory/ClickType;)V #slotClicked
 public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen m_97744_(DD)Lnet/minecraft/world/inventory/Slot; #findSlot
 public net.minecraft.client.gui.screens.inventory.AbstractFurnaceScreen m_6597_(Lnet/minecraft/world/inventory/Slot;IILnet/minecraft/world/inventory/ClickType;)V #slotClicked
