Fire no longer renders in first person.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -69,6 +69,8 @@ public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap
 public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111187_ #vert2
 public net.minecraft.client.renderer.block.ModelBlockRenderer$AmbientVertexRemap f_111188_ #vert3
 public net.minecraft.client.renderer.block.ModelBlockRenderer$SizeInfo f_111258_ #shape
+public net.minecraft.client.renderer.entity.EntityRenderer f_114477_ #shadowRadius
+public net.minecraft.client.renderer.entity.EntityRenderer f_114478_ #shadowStrength
 public net.minecraft.client.renderer.GameRenderer f_109053_ #effectActive
 public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109839_ #chunk
 public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109841_ #directions
