Improved water movement and crawling animation.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -135,6 +135,7 @@ public net.minecraft.stats.Stat <init>(Lnet/minecraft/stats/StatType;Ljava/lang/
 public net.minecraft.util.SortedArraySet m_14274_(I)V #removeInternal
 public net.minecraft.util.SortedArraySet m_14276_(I)Ljava/lang/Object; #getInternal
 protected net.minecraft.world.entity.Entity m_20074_()V #updateInWaterStateAndDoWaterCurrentPushing
+public net.minecraft.world.entity.Entity m_20175_(Lnet/minecraft/world/entity/Pose;)Z #canEnterPose
 public net.minecraft.world.entity.LivingEntity m_141973_(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V #onEffectUpdated
 public net.minecraft.world.entity.LivingEntity m_147218_(Lnet/minecraft/world/item/ItemStack;)V #equipEventAndSound
 public net.minecraft.world.level.block.entity.BlockEntityType$Builder <init>(Lnet/minecraft/world/level/block/entity/BlockEntityType$BlockEntitySupplier;Ljava/util/Set;)V #<constructor>
