Improved fluid movement and general optimizations across the board.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -90,6 +90,8 @@ public net.minecraft.network.chat.NbtComponent f_178447_ #separator
 public net.minecraft.server.level.ChunkMap f_140126_ #viewDistance
 public net.minecraft.server.level.ChunkMap$TrackedEntity f_140472_ #entity
 public net.minecraft.stats.Stat f_12852_ #formatter
+protected net.minecraft.world.entity.LivingEntity f_20931_ #swimAmount
+protected net.minecraft.world.entity.LivingEntity f_20932_ #swimAmount0
 public net.minecraft.world.entity.player.Player f_36089_ #DATA_PLAYER_MODE_CUSTOMISATION
 public net.minecraft.world.level.block.entity.SkullBlockEntity f_59755_ #profileCache
 public net.minecraft.world.level.block.entity.SkullBlockEntity f_59756_ #sessionService
@@ -139,3 +141,4 @@ public net.minecraft.world.entity.Entity m_20175_(Lnet/minecraft/world/entity/Po
 public net.minecraft.world.entity.LivingEntity m_141973_(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V #onEffectUpdated
 public net.minecraft.world.entity.LivingEntity m_147218_(Lnet/minecraft/world/item/ItemStack;)V #equipEventAndSound
 public net.minecraft.world.level.block.entity.BlockEntityType$Builder <init>(Lnet/minecraft/world/level/block/entity/BlockEntityType$BlockEntitySupplier;Ljava/util/Set;)V #<constructor>
+public net.minecraft.world.phys.shapes.SubShape <init>(Lnet/minecraft/world/phys/shapes/DiscreteVoxelShape;IIIIII)V #constructor
