A few rendering optimizations.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -133,6 +133,7 @@ public net.minecraft.client.Option m_91740_(Lnet/minecraft/network/chat/Componen
 public net.minecraft.client.Option m_91764_(I)Lnet/minecraft/network/chat/Component;
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk m_112805_(Lcom/mojang/blaze3d/vertex/BufferBuilder;)V #beginLayer
 public net.minecraft.client.renderer.culling.Frustum m_113006_(DDDDDD)Z #cubeInFrustum
+public net.minecraft.client.renderer.culling.Frustum m_113026_(Lcom/mojang/math/Matrix4f;Lcom/mojang/math/Matrix4f;)V #calculateFrustum
 public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo <init>(Lnet/minecraft/client/renderer/chunk/ChunkRenderDispatcher$RenderChunk;Lnet/minecraft/core/Direction;I)V #<constructor>
 public net.minecraft.client.renderer.texture.TextureAtlasSprite m_118375_(II[Lcom/mojang/blaze3d/platform/NativeImage;)V #upload
 public net.minecraft.client.renderer.texture.TextureAtlasSprite$InterpolationData m_174776_(Lnet/minecraft/client/renderer/texture/TextureAtlasSprite$AnimatedTexture;)V #uploadInterpolatedFrame
