Implemented Evolution screen, which serves as welcome, tips, config and credits.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ run
 /src/main/resources/assets/evolution/textures/item/vanilla/
 /src/main/resources/assets/evolution/textures/item/Nova pasta/
 /javac/production/Evolution-Fabric.main/
+/net/
